stap-1/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __WEB_SERVICE__
  namespace: backend-workshop
  labels:
    workshop-owner: __NAAM__
spec:
  type: ClusterIP
  selector:
    app: __WEB_APP__
  ports:
    - name: http
      port: 80
      targetPort: http
